--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -68,6 +68,7 @@ jobs:
     if: needs.init.outputs.changed == 'true'
     name: Build ${{ matrix.arch }} ${{ matrix.addon }} add-on
     strategy:
+      fail-fast: false
       matrix:
         addon: ${{ fromJson(needs.init.outputs.changed_addons) }}
         arch: ["aarch64", "amd64", "armhf", "armv7", "i386"]
@@ -110,7 +111,9 @@ jobs:
         uses: home-assistant/builder@2023.09.0
         with:
           args: |
+            --docker-hub fab11en \
             ${{ env.BUILD_ARGS }} \
             --${{ matrix.arch }} \
             --target /data/${{ matrix.addon }} \
             --addon
+            
