--- a/letsencrypt/config.yaml
+++ b/letsencrypt/config.yaml
@@ -3,7 +3,7 @@ version: 4.13.0
 slug: letsencrypt
 name: Let's Encrypt
 description: Manage certificate from Let's Encrypt
-url: https://github.com/home-assistant/addons/tree/master/letsencrypt
+url: https://github.com/Fabien-B/HA_addons/tree/master/letsencrypt
 arch:
   - armhf
   - armv7
@@ -11,7 +11,7 @@ arch:
   - amd64
   - i386
 boot: manual
-image: homeassistant/{arch}-addon-letsencrypt
+image: fab11en/{arch}-addon-letsencrypt
 init: false
 map:
   - ssl:rw
